--- a/style.css
+++ b/style.css
@@ -15,11 +15,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px 0 50px;
-     background: rgb(104, 180, 132);
+    padding: 15px 0 50px;
+    background: rgb(104, 180, 132);
     background: radial-gradient(circle, rgba(104, 180, 132, 1) 20%, rgba(104, 180, 132, 1) 50%, rgba(0, 0, 0, 1) 80%);
-
-
 }
 
 .content__header img {
@@ -53,12 +51,34 @@ body {
     text-align: center;
     align-items: center;
 
-    ;
-
 }
 
 .content__card {
+    background-color: #618b56;
+    border-radius: 5px;
+    width: 220px;
+    height: 80px;
+    box-shadow: 5px 5px 5px gray;
+}
+
+.content__desc {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 50px;
+    gap: 1.5rem;
     background-color: #638E58;
     border-radius: 5px;
-    width: 200px;
+    margin-top: 20px;
+    box-shadow: 5px 5px 5px gray;
+}
+
+.content__section__desc {
+    display: flex;
+    justify-content: center;
+}
+.button{
+    background-color: #638E58;
+    border-radius: 5px;
+    width: 100%;
+
 }
