--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
 }
 
 body {
-
-    box-sizing: border-box;
-    background-color: white;
+    background-color: #F2F2F2;
     color: black;
-
 }
 
 .content__header {
@@ -16,12 +16,12 @@ body {
     justify-content: center;
     align-items: center;
     padding: 15px 0 50px;
-    background: rgb(104, 180, 132);
-    background: radial-gradient(circle, rgba(104, 180, 132, 1) 20%, rgba(104, 180, 132, 1) 50%, rgba(0, 0, 0, 1) 80%);
+    background-color: #68B484;
+    /* background: rgb(104, 180, 132); */
+    /* background: radial-gradient(circle, rgba(104, 180, 132, 1) 20%, rgba(104, 180, 132, 1) 50%, rgba(0, 0, 0, 1) 80%); */
 }
 
 .content__header img {
-
     justify-content: center;
 
 }
@@ -33,8 +33,19 @@ body {
     position: fixed;
     width: 100%;
     bottom: 0;
-    background: rgb(104, 180, 132);
-    background: radial-gradient(circle, rgba(104, 180, 132, 1) 20%, rgba(104, 180, 132, 1) 50%, rgba(0, 0, 0, 1) 80%);
+    background-color: #68B484;
+    /* background: rgb(104, 180, 132); */
+    /* background: radial-gradient(circle, rgba(104, 180, 132, 1) 20%, rgba(104, 180, 132, 1) 50%, rgba(0, 0, 0, 1) 80%); */
+}
+
+.content__footer span {
+    margin-right: 33%;
+    position: relative;
+    text-align: center;
+    padding-top: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -45,40 +56,134 @@ body {
 
 .content__section {
     display: flex;
-    margin-top: -20px;
+    margin-top: -40px;
     justify-content: center;
-    gap: 1.5rem;
+    gap: 2.5rem;
     text-align: center;
     align-items: center;
-
 }
 
 .content__card {
-    background-color: #618b56;
+    background-color: white;
     border-radius: 5px;
-    width: 220px;
-    height: 80px;
+    width: 400px;
+    height: 90px;
     box-shadow: 5px 5px 5px gray;
+    border: .5px solid black;
+}
+
+.button {
+
+    padding: 5px 0;
+    border-radius: 8px;
+    background-color: rgb(104, 180, 132);
+    text-align: center;
+    border: none;
+    width: 100px;
+
+}
+
+.content___radio {
+    display: flex;
+    padding: 10px 0 0 0;
+    gap: 1.5rem;
+
+}
+
+.content___table {
+    display: flex;
+    background: white;
+    margin-top: 20px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 5px gray;
+    border: .5px solid black;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 5px;
+}
+
+/* .content___table th {} */
+
+
+.content___table th,
+td {
+    text-align: center;
+    padding: 5px 10px;
+}
+
+.content___table tr:nth-child(even) {
+    background-color: #E7E9EB;
+}
+
+
+/* DESCRIÇÃO */
+
+.content__section__desc {
+    display: flex;
+    background: white;
+    padding: 50px;
+    margin-top: 20px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 5px gray;
+    border: .5px solid black;
+    width: 100%;
+    gap: 2rem;
 }
 
 .content__desc {
     display: flex;
     justify-content: space-between;
-    padding: 20px 50px;
-    gap: 1.5rem;
-    background-color: #638E58;
-    border-radius: 5px;
-    margin-top: 20px;
-    box-shadow: 5px 5px 5px gray;
+    position: relative;
 }
 
-.content__section__desc {
-    display: flex;
-    justify-content: center;
+.content__desc input {
+    position: relative;
+    padding: 8px 10px;
+    border: none;
+    outline: none;
+    color: black;
+    letter-spacing: .05rem;
+    background: transparent;
+    z-index: 1;
+
 }
-.button{
-    background-color: #638E58;
-    border-radius: 5px;
+
+.content__desc input:valid~span,
+.content__desc input:focus~span {
+    font-size: 1rem;
+    transform: translateY(-32px);
+
+}
+
+
+.content__desc span {
+    position: absolute;
+    left: 0;
+    transition: .3s;
+    padding: 10px 8px;
+    color: #040305;
+    font-size: 1rem;
+    pointer-events: none;
+}
+
+.content__desc i {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: .3s;
     width: 100%;
+    height: 3px;
+    border-radius: 8px;
+    border: .5px solid rgb(104, 180, 132);
+    pointer-events: none;
+}
+
+.content__desc input:valid~i,
+.content__desc input:focus~i {
+    height: 100%;
+
 
 }
