--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@ body {
 .content__footer {
     background-color: rgb(100, 97, 90);
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
+    justify-content: space-between;
+    vertical-align: middle;
     position: fixed;
     width: 100%;
     bottom: 0;
@@ -38,13 +40,7 @@ body {
     /* background: radial-gradient(circle, rgba(104, 180, 132, 1) 20%, rgba(104, 180, 132, 1) 50%, rgba(0, 0, 0, 1) 80%); */
 }
 
-.content__footer span {
-    margin-right: 33%;
-    position: relative;
-    text-align: center;
-    padding-top: 7px;
-    display: flex;
-    justify-content: center;
+.content__footer > div:nth-child(1) {
     align-items: center;
 
 }
