--- a/style.css
+++ b/style.css
@@ -17,8 +17,6 @@ body {
     align-items: center;
     padding: 15px 0 50px;
     background-color: #68B484;
-    /* background: rgb(104, 180, 132); */
-    /* background: radial-gradient(circle, rgba(104, 180, 132, 1) 20%, rgba(104, 180, 132, 1) 50%, rgba(0, 0, 0, 1) 80%); */
 }
 
 .content__header img {
@@ -26,24 +24,43 @@ body {
 
 }
 
+/* FOOTER */
 .content__footer {
-    background-color: rgb(100, 97, 90);
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    vertical-align: middle;
     position: fixed;
     width: 100%;
+    height: 5%;
     bottom: 0;
     background-color: #68B484;
-    /* background: rgb(104, 180, 132); */
-    /* background: radial-gradient(circle, rgba(104, 180, 132, 1) 20%, rgba(104, 180, 132, 1) 50%, rgba(0, 0, 0, 1) 80%); */
 }
 
-.content__footer > div:nth-child(1) {
+
+.devdu {
+    color: #F2F2F2;
+    margin: 0 auto;
+    display: grid;
+    flex: 1;
     align-items: center;
+    text-align: center;
+}
+
+.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 5px;
+    gap: .5rem;
 
 }
+
+.links img {
+    width: 25px;
+    height: 25px;
+}
+
+
+/* FOOTER END */
 
 .content__main {
     width: min(90vw, 850px);
@@ -61,21 +78,63 @@ body {
 
 .content__card {
     background-color: white;
-    border-radius: 5px;
+    border-radius: 3px;
     width: 400px;
     height: 90px;
     box-shadow: 5px 5px 5px gray;
     border: .5px solid black;
+
+
+
+
+}
+
+.content__card img {
+    width: 25px;
+    height: 25px;
+}
+
+.content__card h1 {
+
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+    padding: 10px;
+}
+
+.content__card p {
+    padding-top: 10px;
+    font-size: 20px;
+    justify-content: center;
+}
+
+#alerta {
+    display: none;
 }
 
 .button {
-
+    display: flex;
+    justify-content: center;
     padding: 5px 0;
     border-radius: 8px;
-    background-color: rgb(104, 180, 132);
+    background-color: #68B484;
     text-align: center;
+    gap: .5rem;
     border: none;
-    width: 100px;
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 5px;
+
+
+}
+
+.button img {
+
+    width: 15px;
+    height: 15px;
 
 }
 
@@ -90,7 +149,7 @@ body {
     display: flex;
     background: white;
     margin-top: 20px;
-    border-radius: 8px;
+    border-radius: 3px;
     box-shadow: 5px 5px 5px gray;
     border: .5px solid black;
 }
@@ -101,7 +160,10 @@ table {
     border-radius: 5px;
 }
 
-/* .content___table th {} */
+.content___table th {
+    background-color: #68B484;
+
+}
 
 
 .content___table th,
@@ -112,6 +174,7 @@ td {
 
 .content___table tr:nth-child(even) {
     background-color: #E7E9EB;
+
 }
 
 
@@ -122,7 +185,7 @@ td {
     background: white;
     padding: 50px;
     margin-top: 20px;
-    border-radius: 8px;
+    border-radius: 3px;
     box-shadow: 5px 5px 5px gray;
     border: .5px solid black;
     width: 100%;
