--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* start ALL */
+
 * {
     margin: 0;
     padding: 0;
@@ -6,11 +8,17 @@
 
 }
 
+/* end ALL */
+
+/* start Body */
 body {
     background-color: #F2F2F2;
     color: black;
 }
 
+/* end Body */
+
+/* start Header */
 .content__header {
     display: flex;
     justify-content: center;
@@ -24,49 +32,19 @@ body {
 
 }
 
-/* FOOTER */
-.content__footer {
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    width: 100%;
-    height: 5%;
-    bottom: 0;
-    background-color: #68B484;
-}
+/* end Header */
 
 
-.devdu {
-    color: #F2F2F2;
-    margin: 0 auto;
-    display: grid;
-    flex: 1;
-    align-items: center;
-    text-align: center;
-}
-
-.links {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 5px;
-    gap: .5rem;
-
-}
-
-.links ion-icon {
-    width: 25px;
-    height: 25px;
-}
-
-
-/* FOOTER END */
+/* start Main */
 
 .content__main {
     width: min(90vw, 850px);
     margin: auto;
 }
 
+/* end Main */
+
+/* start Section */
 .content__section {
     display: flex;
     margin-top: -40px;
@@ -84,14 +62,19 @@ body {
     box-shadow: 5px 5px 5px gray;
     border: .5px solid black;
 
-
-
-
 }
 
-.content__card img {
+.content__card ion-icon {
     width: 25px;
     height: 25px;
+}
+
+.content__card ion-icon:nth-child(1) {
+    color: green
+}
+
+.content__card ion-icon:nth-child(2) {
+    color: red
 }
 
 .content__card h1 {
@@ -110,11 +93,94 @@ body {
     justify-content: center;
 }
 
-#alerta {
+.content__card ion-icon:nth-child(2) {
     display: none;
 }
 
-.button {
+
+/* end Section */
+
+/* start DESCRIÇÃO */
+
+.content__section__desc {
+    display: flex;
+    background: white;
+    padding: 50px;
+    margin-top: 20px;
+    border-radius: 3px;
+    box-shadow: 5px 5px 5px gray;
+    border: .5px solid black;
+    width: 100%;
+    gap: 2rem;
+}
+
+.content__desc {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.content__desc input {
+    position: relative;
+    padding: 8px 10px;
+    border: none;
+    outline: none;
+    color: black;
+    letter-spacing: .05rem;
+    background: transparent;
+    z-index: 1;
+
+
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.content__desc input:valid~span,
+.content__desc input:focus~span {
+    font-size: 1rem;
+    transform: translateY(-32px);
+
+}
+
+
+.content__desc span {
+    position: absolute;
+    left: 0;
+    transition: .3s;
+    padding: 10px 8px;
+    color: #040305;
+    font-size: 1rem;
+    pointer-events: none;
+}
+
+.content__desc i {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: .3s;
+    width: 100%;
+    height: 3px;
+    border-radius: 8px;
+    border: .5px solid rgb(104, 180, 132);
+    pointer-events: none;
+}
+
+.content__desc input:valid~i,
+.content__desc input:focus~i {
+    height: 100%;
+}
+
+.content___desc___radio {
+    display: flex;
+    padding: 1% 0 0 0;
+    gap: 1.5rem;
+}
+
+.content___desc___button {
     display: flex;
     justify-content: center;
     padding: 5px 0;
@@ -127,27 +193,17 @@ body {
     font-size: 16px;
     font-weight: bold;
     align-items: center;
-
-
-
-
 }
 
-.button ion-icon {
+.content___desc___button ion-icon {
 
     width: 20px;
     height: 20px;
-
 }
 
-.content___radio {
-    display: flex;
-    padding: 1% 0 0 0;
-    gap: 1.5rem;
+/* end Descrição */
 
-}
-
-/* TABELA */
+/* start TABELA */
 
 .content___table {
     display: flex;
@@ -186,92 +242,59 @@ td {
     gap: 2rem;
 
 }
-.btn-actions ion-icon{
+
+.btn-actions ion-icon {
     cursor: pointer;
 
 }
 
 .btn-actions ion-icon:nth-child(1):hover {
-    color: rgb(104, 180, 132);
+    color: rgb(87, 155, 112);
 }
+
 .btn-actions ion-icon:nth-child(2):hover {
     color: rgb(231, 32, 25);
 }
 
-.content___table ion-icon{
+.content___table ion-icon {
     width: 20px;
     height: 20px;
 }
-
-
 /* END TABELA */
 
-
-/* DESCRIÇÃO */
-
-.content__section__desc {
-    display: flex;
-    background: white;
-    padding: 50px;
-    margin-top: 20px;
-    border-radius: 3px;
-    box-shadow: 5px 5px 5px gray;
-    border: .5px solid black;
-    width: 100%;
-    gap: 2rem;
-}
-
-.content__desc {
+/*start FOOTER */
+.content__footer {
     display: flex;
     justify-content: space-between;
-    position: relative;
-}
-
-.content__desc input {
-    position: relative;
-    padding: 8px 10px;
-    border: none;
-    outline: none;
-    color: black;
-    letter-spacing: .05rem;
-    background: transparent;
-    z-index: 1;
-
-}
-
-.content__desc input:valid~span,
-.content__desc input:focus~span {
-    font-size: 1rem;
-    transform: translateY(-32px);
-
-}
-
-
-.content__desc span {
-    position: absolute;
-    left: 0;
-    transition: .3s;
-    padding: 10px 8px;
-    color: #040305;
-    font-size: 1rem;
-    pointer-events: none;
-}
-
-.content__desc i {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transition: .3s;
+    position: fixed;
     width: 100%;
-    height: 3px;
-    border-radius: 8px;
-    border: .5px solid rgb(104, 180, 132);
-    pointer-events: none;
+    height: 5%;
+    bottom: 0;
+    background-color: #68B484;
 }
 
-.content__desc input:valid~i,
-.content__desc input:focus~i {
-    height: 100%;
+.devdu {
+    color: #F2F2F2;
+    margin: 0 auto;
+    display: grid;
+    flex: 1;
+    align-items: center;
+    text-align: center;
+}
 
+.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 5px;
+    gap: .5rem;
 
 }
+
+.links ion-icon {
+    width: 25px;
+    height: 25px;
+}
+
+
+/* end FOOTER */
