--- a/style.css
+++ b/style.css
@@ -193,12 +193,18 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 16px;
     font-weight: bold;
     align-items: center;
+    cursor: pointer;
+    outline: none;
 }
 
 .content___desc___button ion-icon {
-
     width: 20px;
     height: 20px;
+}
+.content___desc___button:active{
+    background-color: #3e8e41;
+     transform: translateY(1px);
+ 
 }
 
 /* end Descrição */
