--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 /* start ALL */
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
 }
 
 /* end ALL */
@@ -77,8 +75,12 @@ body {
     color: red
 }
 
-.content__card h1 {
+.content__card ion-icon:nth-child(2) {
+    display: none;
+}
 
+
+.content__card h1 {
     text-align: center;
     align-items: center;
     display: flex;
@@ -87,16 +89,15 @@ body {
     padding: 10px;
 }
 
+.gastos ion-icon:nth-child(1) {
+    color: red
+}
+
 .content__card p {
-    padding-top: 10px;
+    align-items: center;
     font-size: 20px;
     justify-content: center;
 }
-
-.content__card ion-icon:nth-child(2) {
-    display: none;
-}
-
 
 /* end Section */
 
@@ -201,10 +202,11 @@ input[type=number]::-webkit-outer-spin-button {
     width: 20px;
     height: 20px;
 }
-.content___desc___button:active{
+
+.content___desc___button:active {
     background-color: #3e8e41;
-     transform: translateY(1px);
- 
+    transform: translateY(1px);
+
 }
 
 /* end Descrição */
@@ -266,6 +268,7 @@ td {
     width: 20px;
     height: 20px;
 }
+
 /* END TABELA */
 
 /*start FOOTER */
