--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
 
 .content__header img {
     justify-content: center;
-
 }
 
 /* end Header */
@@ -54,7 +53,6 @@ body {
 
 .content__card {
     background-color: white;
-
     border-radius: 3px;
     width: 400px;
     height: 90px;
@@ -125,7 +123,6 @@ body {
 
 .content__desc input {
     position: relative;
-    padding: 8px 10px;
     border: none;
     outline: none;
     color: black;
@@ -155,7 +152,7 @@ input[type=number]::-webkit-outer-spin-button {
     left: 0;
     transition: .3s;
     padding: 10px 8px;
-    color:black;
+    color: black;
     font-size: 1rem;
     pointer-events: none;
 }
@@ -186,19 +183,21 @@ input[type=number]::-webkit-outer-spin-button {
 .content___desc___button {
     display: flex;
     justify-content: center;
-    padding: 5px 0;
-    border-radius: 8px;
-    background-color: #68B484;
+    border-radius: 2em;
+    background-color: rgb(104, 180, 132);
     text-align: center;
-    gap: .5rem;
+    gap: .7rem;
     border: none;
-    width: 100%;
+    width: 10em;
+    height: 2em;
     font-size: 16px;
     font-weight: bold;
     align-items: center;
     cursor: pointer;
     outline: none;
+    color: #E7E9EB;
 }
+
 
 .content___desc___button ion-icon {
     width: 20px;
@@ -207,7 +206,9 @@ input[type=number]::-webkit-outer-spin-button {
 
 .content___desc___button:active {
     background-color: #3e8e41;
-    transform: translateY(1px);
+
+
+
 
 }
 
@@ -243,6 +244,10 @@ td {
     padding: 5px 10px;
 }
 
+.content___table th {
+    color: #E7E9EB;
+}
+
 .content___table tr:nth-child(even) {
     background-color: #E7E9EB;
 
@@ -255,26 +260,26 @@ td {
 
 .btn-actions ion-icon {
     cursor: pointer;
-    
+
 }
 
 
 .btn-actions ion-icon:nth-child(1):hover {
     color: rgb(87, 155, 112);
-    transform: scale( 1.5);
+    transform: scale(1.5);
     transition: .2s;
 }
 
 .btn-actions ion-icon:nth-child(2):hover {
     color: rgb(231, 32, 25);
-    transform: scale( 1.5);
+    transform: scale(1.5);
     transition: .2s;
 }
 
 .content___table ion-icon {
     width: 20px;
     height: 20px;
-    
+
 }
 
 /* END TABELA */
@@ -283,15 +288,17 @@ td {
 .content__footer {
     display: flex;
     justify-content: space-between;
-    position: fixed;
+    margin-top: 20px;
     width: 100%;
     height: 5%;
     bottom: 0;
     background-color: #68B484;
+    padding: 10px;
 }
 
 .devdu {
     color: #F2F2F2;
+    font-weight: bold;
     margin: 0 auto;
     display: grid;
     flex: 1;
@@ -306,18 +313,44 @@ td {
     padding-top: 5px;
     gap: .5rem;
 
+
 }
 
 .links ion-icon {
     width: 25px;
     height: 25px;
 }
-.links ion-icon:hover{
-    color: #E7E9EB;
-    cursor:pointer;
-    transform: scale( 1.5);
-    transition: .2s;
 
+.links ion-icon {
+    color: #F2F2F2;
+}
+
+#insta ion-icon:hover {
+    color: #7f37c9;
+    cursor: pointer;
+    transform: scale(1.5);
+    transition: .2s;
+}
+
+#lin ion-icon:hover {
+    color: #0e76a8;
+    cursor: pointer;
+    transform: scale(1.5);
+    transition: .2s;
+}
+
+#face ion-icon:hover {
+    color: #4267b3;
+    cursor: pointer;
+    transform: scale(1.5);
+    transition: .2s;
+}
+
+#git ion-icon:hover {
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    transform: scale(1.5);
+    transition: .2s;
 }
 
 /* end FOOTER */
