--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    
+    
 }
 
 /* end Body */
@@ -76,6 +78,9 @@ body {
     transition: .2s;
 }
 
+.icon-p{
+    color: green;
+}
 
 #checkd{
     color: green;
