--- a/style.css
+++ b/style.css
@@ -15,9 +15,20 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-
+    overflow-x: hidden; 
 
 }
+html ::-webkit-scrollbar {
+    width: 5px;
+  }
+  html ::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: #68B484;
+  }
+  html ::-webkit-scrollbar-track {
+    background: #ededed;
+   
+  }
 
 /* end Body */
 
@@ -144,7 +155,7 @@ body {
     z-index: 1;
     padding: 5px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    
+
 
 }
 
@@ -329,15 +340,23 @@ td {
 
 /*start FOOTER */
 footer {
-    display: flex;
+    /* display: flex;
     position: relative;
     justify-content: space-between;
     margin-top: 20px;
     width: 100%;
     height: 5%;
     bottom: 0;
-    background-color: #68B484;
+    padding: 10px; */
+    margin-top: 25px;
     padding: 10px;
+    border-top: 1px solid var(--primary);
+    box-shadow: inset 0 1px 1px var(--primary);
+    color: var(--primary);
+    font-weight: 300;
+    display: flex;
+    flex-direction: column;
+    background-color: #68B484;
 }
 
 .devdu {
@@ -354,7 +373,9 @@ footer {
 
 .links {
     display: flex;
-    padding-top: 5px;
+    position: absolute;
+    right: 0;
+    margin-right: 10px;
     gap: .5rem;
 }
 
@@ -370,28 +391,28 @@ footer {
 #insta ion-icon:hover {
     color: #ff2992;
     cursor: pointer;
-    transform: scale(1.5);
+    transform: scale(1.2);
     transition: .2s;
 }
 
 #lin ion-icon:hover {
     color: #0e76a8;
     cursor: pointer;
-    transform: scale(1.5);
+    transform: scale(1.2);
     transition: .2s;
 }
 
 #face ion-icon:hover {
     color: #4267b3;
     cursor: pointer;
-    transform: scale(1.5);
+    transform: scale(1.2);
     transition: .2s;
 }
 
 #git ion-icon:hover {
     color: rgb(0, 0, 0);
     cursor: pointer;
-    transform: scale(1.5);
+    transform: scale(1.2);
     transition: .2s;
 }
 
