--- a/style.css
+++ b/style.css
@@ -195,6 +195,11 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 1% 0 0 0;
   gap: 1.5rem;
 }
+.content__date input{
+border-radius: 1rem;
+border: 0.5px solid rgb(104, 180, 132);
+text-align: center;
+}
 
 .content___desc___radio {
   display: flex;
